--- a/spectrum-web/src/main/webapp/pages/index.html
+++ b/spectrum-web/src/main/webapp/pages/index.html
@@ -9,16 +9,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="" />
 <meta name="keywords" content="" />
-<link rel="stylesheet" type="text/css" href="css/animate.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/line-awesome.css">
-<link rel="stylesheet" type="text/css" href="css/line-awesome-font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.min.css">
-<link rel="stylesheet" type="text/css" href="lib/slick/slick.css">
-<link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/responsive.css">
+<link rel="stylesheet" type="text/css" href="../resources/css/animate.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/bootstrap.min.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/line-awesome.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/line-awesome-font-awesome.min.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/font-awesome.min.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/jquery.mCustomScrollbar.min.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/lib/slick/slick.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/lib/slick/slick-theme.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/responsive.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/util.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/jquery.range.css" />
+			<link rel="stylesheet" type="text/css" href="../resources/css/flatpickr.min.css" />
 </head>
 
 
@@ -1096,13 +1099,13 @@
 
 
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/popper.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.mCustomScrollbar.js"></script>
-<script type="text/javascript" src="lib/slick/slick.min.js"></script>
-<script type="text/javascript" src="js/scrollbar.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="../resources/js/jquery.min.js"></script>
+	<script type="text/javascript" src="../resources/js/popper.js"></script>
+	<script type="text/javascript" src="../resources/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../resources/js/jquery.mCustomScrollbar.js"></script>
+	<script type="text/javascript" src="../resources/lib/slick/slick.min.js"></script>
+	<script type="text/javascript" src="../resources/js/scrollbar.js"></script>
+	<script type="text/javascript" src="../resources/js/script.js"></script>
 
 </body>
 
