--- a/spectrum-web/src/main/webapp/login2.xhtml
+++ b/spectrum-web/src/main/webapp/login2.xhtml
@@ -37,6 +37,9 @@
 			<div class="container-login100-form-btn">
 							<h:commandButton class="login100-form-btn" style="background:#2196F3 ;cursor: pointer; " value="Singup" action="#{loginBean.do_Logout()}"/>
 					</div>
+	<div class="container-login100-form-btn">
+							<h:commandButton class="login100-form-btn" style="background:#2196F3 ;cursor: pointer; " value="Forgot password" action="#{loginBean.do_Logout2()}"/>
+					</div>
 
 			
 
